# edit-google-doc-from-markdown

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  TODO.md  activate.sh
.claude/skills/1-eval-ticket/: SKILL.md
.dev/: TODO.md
.dev/adr/: 001-portee-du-projet.md
.dev/analyses/: 001-requirement-spec-feature.md  002-slash-commands-et-skills.md
.dev/features/: 001-push-markdown-vers-gdoc.md  002-pull-gdoc-vers-markdown.md  003-rapport-synchronisation.md  README.md  _template.md
.dev/history/: 001-init-projet.md  002-readme.md  005-adr-portee.md
.dev/needs/: 001-synchronisation-markdown-google-docs.md  002-suivi-evolution-via-git.md  README.md  _template.md
.dev/prompt-history/: 002-readme.md
.dev/requirements/: 001-conversion-markdown-vers-gdoc.md  002-conversion-gdoc-vers-markdown.md  003-association-fichier-document.md  004-detection-perte-information.md  005-separation-contenu-style.md  006-detection-conflits.md  007-authentification-compte-service.md  008-transport-api-google.md  009-stabilite-markdown-genere.md  010-etat-persistant-fichier-travail.md  011-gestion-multi-fichiers.md  012-mode-silencieux.md  013-strategie-resolution-conflits.md  014-strategie-mise-a-jour.md  README.md  _template.md
.dev/specs/: README.md  _template.md
.github/prompts/: 0-init-enhancement.prompt.md  3-implement.prompt.md  5-consolidate.prompt.md  6-publish.prompt.md
scripts/: nou
src/: agent.rs  cli.rs  converter.rs  error.rs  google_docs.rs  lib.rs  main.rs  mapping.rs  markdown.rs  style.rs  sync.rs  tools.rs
(+14 files in other folders)
